--- a/garena/AOV.html
+++ b/garena/AOV.html
@@ -195,7 +195,7 @@
     <img src="Aov/aovbg.png" alt="HOKBG Banner">
   </div>
 <div class="logo-section">
-  <img src="logo.png" alt="Brilliant Gaming Logo" class="logo-img">
+  <img src="../logo.png" alt="Brilliant Gaming Logo" class="logo-img">
   <p class="logo-subtitle">让充值更简单 · 更划算 · 更安全</p>
 </p>
   
