--- a/garena入口.html
+++ b/garena入口.html
@@ -57,7 +57,7 @@
     </div>
 
     <div class="game-card" data-name="Garena - Call of Duty:Mobile">
-      <a href="CODM.html">
+      <a href="garena/CODM.html">
         <img src="garena/CODM/codm.png" alt="HOKLOGO" />
         <p class="game-title">Garena<BR>Call of Duty:Mobile</p>
     </a>
