--- a/腾讯.html
+++ b/腾讯.html
@@ -61,7 +61,13 @@
         <p class="game-title">金铲铲之战</p>
       </a>
     </div>
-
+  <!-- ✅ 隐藏卡片：王者荣耀 -->
+    <div class="game-card hidden" data-name="demo">
+      <a href="首页demo.html">
+        <img src="wangzhe.jpg" alt="王者荣耀" />
+        <p class="game-title">王者荣耀</p>
+      </a>
+    </div>
   </section>
 
   <!-- 页脚 -->
