--- a/首页demo.html
+++ b/首页demo.html
@@ -155,13 +155,14 @@
 
     .game-list {
   display: grid;
-  grid-template-columns: repeat(5, 200px);
-  justify-content: center; /* 关键！让网格居中 */
-  gap: 0px; /* 或你原来的 */
-  padding: 0px;
-  max-width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  justify-content: center;
+  gap: 12px;
+  padding: 20px;
+  max-width: 1200px;
   margin: auto;
 }
+
 
 .container {
   max-width: 1280px;
