--- a/首页demo.html
+++ b/首页demo.html
@@ -159,13 +159,14 @@
       color: #FFD700 ;
     }
 
- .game-list {
+ .game-list (max-width: 768px)  {
   display: grid;
-  grid-template-columns: repeat(2, minmax(0, 1fr)); /* 手机每列平均分配 */
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 12px;
   padding: 0 12px;
-  margin: auto;
+  margin:auto;
 }
+
 
 
 @media (min-width: 768px) {
@@ -225,6 +226,11 @@
 }
 
   </style>
+  html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 </head>
 <body>
   <header>
