--- a/首页demo.html
+++ b/首页demo.html
@@ -42,7 +42,7 @@
     }
     @media (max-width: 768px) {
   .logo-search img {
-    padding-left: -8px;
+    padding-left: -18px;
     height: 60px; /* 手机上更合适的尺寸 */
   }
   }
@@ -161,7 +161,7 @@
 
  .game-list (max-width: 768px)  {
   display: grid;
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-template-columns: repeat(2);
   gap: 12px;
   padding: 0 12px;
   margin:auto;
