--- a/首页demo.html
+++ b/首页demo.html
@@ -162,21 +162,25 @@
  @media (max-width: 768px) {
   .game-list {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 8px;               /* 卡片之间留一点点空 */
-    padding: 0 16px;        /* 左右白边 */
+    grid-template-columns: repeat(2, 1fr);  /* 两列 */
+    gap: 8px;
+    padding: 0 12px;
     box-sizing: border-box;
-    margin: 0 auto;
+    margin: auto;
+  }
+
+  .game-card {
+    width: 100%;
+    max-width: 100%;
   }
 
   .game-card img {
-    height: 130px;          /* 卡片图稍微缩小点，看起来不压迫 */
-  }
-
-  .game-title {
-    font-size: 13px;        /* 适配小屏字体 */
+    width: 100%;
+    height: 130px;
+    object-fit: contain;
   }
 }
+
 
 
 @media (min-width: 768px) {
