--- a/首页demo.html
+++ b/首页demo.html
@@ -162,10 +162,10 @@
  @media (max-width: 768px) {
   .game-list {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* 两列，每列平均宽度 */
-    gap: 0px;               /* 中间间距，别太小也别太大 */
-    padding: -10 30px;         /* 左右留白感！就是靠这个 */
-    box-sizing: border-box;  /* 很关键！让 padding 被算进去 */
+    grid-template-columns: repeat(auto-fit, 160px); /* 卡片固定宽度 */
+    justify-content: center; /* 整个网格居中对齐 */
+    gap: 12px; /* 卡片之间的间距 */
+    padding: 0 12px; /* 左右留白 */
   }
 
   .game-card {
