--- a/首页demo.html
+++ b/首页demo.html
@@ -162,7 +162,7 @@
  @media (max-width: 768px) {
   .game-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit); /* 卡片固定宽度 */
+    grid-template-columns: repeat(auto-fit(2, 1fr)); /* 卡片固定宽度 */
     justify-content: center; /* 整个网格居中对齐 */
     gap: 0px; /* 卡片之间的间距 */
     padding: 0 12px; /* 左右留白 */
