--- a/首页demo.html
+++ b/首页demo.html
@@ -159,13 +159,12 @@
       color: #FFD700 ;
     }
 
- @media (max-width: 768px) {
+  @media (max-width: 768px) {
   .game-list {
     display: grid;
-  grid-template-columns: repeat(2, 1fr);
-    justify-content: center; /* 整个网格居中对齐 */
-    gap: -20px; /* 卡片之间的间距 */
-    padding: 0 12px; /* 左右留白 */
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0px;
+    padding: 0 16px; /* 左右留白 */
   }
 
   .game-card img {
