--- a/首页demo.html
+++ b/首页demo.html
@@ -162,9 +162,11 @@
   @media (max-width: 768px) {
   .game-list {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 0px;
-    padding: 0 16px; /* 左右留白 */
+    grid-template-columns: repeat(2, 1fr); /* 每行两个 */
+    gap: 0px;               /* 卡片之间的间距 */
+    padding-left: 0px;      /* 左边留一点空 */
+    padding-right: 10;        /* 右边不要空隙 */
+    justify-content: start;  /* 关键！从左边开始排 */
   }
 
   .game-card img {
