--- a/首页demo.html
+++ b/首页demo.html
@@ -165,7 +165,8 @@
     grid-template-columns: repeat(2, 1fr); /* 每行两个 */
     gap: 0px;               /* 卡片之间的间距 */
     padding-left: 0px;      /* 左边留一点空 */
-    padding-right: 60;        /* 右边不要空隙 */
+    padding-right: 160;        /* 右边不要空隙 */
+    justify-content: start
   }
 
   .game-card img {
