--- a/首页demo.html
+++ b/首页demo.html
@@ -192,7 +192,8 @@
   grid-template-columns: repeat(5, 200px);
   justify-content: center; /* 关键！让网格居中 */
   gap: 0px; /* 或你原来的 */
-  padding: 0px;
+  padding-left: 0px;
+  padding-right: 4px;
   max-width: 1200px;
   margin: auto;
 }
