--- a/首页demo.html
+++ b/首页demo.html
@@ -36,10 +36,11 @@
     }
 
     .logo-search img {
-      height: 50px：
-      width: auto;
-      max-width: none;
+  height: 50px;
+  width: auto;
+  max-width: none;
     }
+    
     @media (max-width: 768px) {
   .game-list {
     display: grid;
