--- a/首页demo.html
+++ b/首页demo.html
@@ -40,7 +40,7 @@
   width: auto;
   max-width: none;
     }
-    
+
     @media (max-width: 768px) {
   .game-list {
     display: grid;
@@ -52,6 +52,7 @@
 
   .game-card {
     margin: 0;
+    padding: 0;
   }
 }
 
