--- a/首页demo.html
+++ b/首页demo.html
@@ -285,63 +285,63 @@ html, body {
     <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
         <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
-        <p class="game-title">鸣潮<br>Wuthering Waves</p>
+        <p class="game-title">鸣潮<br></p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
         <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
-        <p class="game-title">鸣潮<br>Wuthering Waves<br></p>
+        <p class="game-title">鸣潮<br><br></p>
       </a>
     </div>
     
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
         <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
-        <p class="game-title">鸣潮<br>Wuthering Waves</p>
+        <p class="game-title">鸣潮<br></p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
         <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
-        <p class="game-title">鸣潮<br>Wuthering Waves</p>
+        <p class="game-title">鸣潮<br></p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
         <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
-        <p class="game-title">鸣潮<br>Wuthering Waves</p>
+        <p class="game-title">鸣潮<br></p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
         <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
-        <p class="game-title">鸣潮<br>Wuthering Waves</p>
+        <p class="game-title">鸣潮<br></p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
         <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
-        <p class="game-title">鸣潮<br>Wuthering Waves</p>
+        <p class="game-title">鸣潮<br></p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
         <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
-        <p class="game-title">鸣潮<br>Wuthering Waves</p>
+        <p class="game-title">鸣潮<br></p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
         <img src="test1.png" alt="鸣潮" />
-        <p class="game-title">鸣潮<br>Wuthering Waves</p>
+        <p class="game-title">鸣潮<br></p>
       </a>
     </div>
 
