--- a/首页demo.html
+++ b/首页demo.html
@@ -293,56 +293,56 @@ html, body {
   <section class="game-list">
     <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves<br></p>
       </a>
     </div>
     
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves</p>
       </a>
     </div>
