--- a/首页demo.html
+++ b/首页demo.html
@@ -50,13 +50,13 @@
 }
 
 
-    @media (max-width: 768px) {
-  display: grid;
+    @media (max-width: 768px) 
+  display: grid;{
   grid-template-columns: repeat(2, 1fr);
   gap: 0px;
   justify-content: center; /* 🔥 让卡片居中排列 */
   padding-left: 0px;
-  padding-right: 0px;
+  padding-right: 8px;
   margin: auto;
   }
 
@@ -64,7 +64,7 @@
     margin: 0;
     padding: 0;
   }
-}
+
 
     .search-bar {
       position: absolute;
