--- a/首页demo.html
+++ b/首页demo.html
@@ -50,20 +50,22 @@
 }
 
 
-    @media (max-width: 768px) 
-  display: grid;{
-  grid-template-columns: repeat(2, 1fr);
-  gap: 0px;
-  justify-content: center; /* 🔥 让卡片居中排列 */
-  padding-left: 0px;
-  padding-right: 8px;
-  margin: auto;
+    @media (max-width: 768px) {
+  .game-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0px;
+    justify-content: center; /* 🔥 让卡片居中排列 */
+    padding-left: 0px;
+    padding-right: 8px;
+    margin: auto;
   }
 
   .game-card {
     margin: 0;
     padding: 0;
   }
+}
 
 
     .search-bar {
