--- a/首页demo copy1.html
+++ b/首页demo copy1.html
@@ -6,6 +6,57 @@
   <title>Brilliant Gaming</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
+    .footer {
+  background-color: #111;
+  color: #ccc;
+  font-family: 'Segoe UI', sans-serif;
+  font-size: 14px;
+  padding: 40px 20px;
+}
+.footer h2, .footer h3 {
+  color: #fff;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+.footer-container {
+  max-width: 1200px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 40px;
+}
+.footer-section p {
+  margin: 6px 0;
+}
+.link {
+  color: #00bfff;
+}
+.payment-img {
+  max-width: 160px;
+  margin-top: 10px;
+}
+.footer hr {
+  border: none;
+  border-top: 1px solid #333;
+  margin: 30px 0;
+}
+.footer-bottom {
+  text-align: center;
+  font-size: 12px;
+  color: #666;
+}
+.footer-links {
+  margin-bottom: 10px;
+}
+.footer-links a {
+  color: #777;
+  margin: 0 10px;
+  text-decoration: none;
+}
+.footer-links a:hover {
+  color: #fff;
+}
+
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
@@ -35,11 +86,38 @@
       gap: 24px;
     }
 
-    .logo-search img {
-      height: 90px;
-      width: auto;
-      max-width: none;
-    }
+.logo-search img {
+  height: 80px;
+  width: auto;
+  max-width: none;
+}
+
+@media (max-width: 768px) {
+  .logo-search img {
+    height: 50px;
+    width: auto;
+    max-width: none;
+  }
+}
+
+
+    @media (max-width: 768px) {
+  .game-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0px;
+    justify-content: center; /* 🔥 让卡片居中排列 */
+    padding-left: 0px;
+    padding-right: 8px;
+    margin: auto;
+  }
+
+  .game-card {
+    margin: 0;
+    padding: 0;
+  }
+}
+
 
     .search-bar {
       position: absolute;
@@ -153,16 +231,45 @@
       color: #FFD700 ;
     }
 
-    .game-list {
+  @media (max-width: 768px) {
+  .game-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 每行两个 */
+    gap: 0px;               /* 卡片之间的间距 */
+    padding-left: 0px;
+    padding-right: 36px;
+    justify-content: start
+  }
+
+  .game-card img {
+    max-width: 140px;
+    width: 100%;
+    height: 130px;
+    object-fit: contain;
+  }
+}
+
+
+
+@media (min-width: 780px) {
+  .game-list {
   display: grid;
   grid-template-columns: repeat(5, 200px);
   justify-content: center; /* 关键！让网格居中 */
   gap: 0px; /* 或你原来的 */
-  padding: 0px;
+  padding-left: 0px;
+  padding-right: 4px;
   max-width: 1200px;
   margin: auto;
 }
+}
 
+
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 16px;
+}
 
 
 .game-card {
@@ -200,6 +307,10 @@
   line-height: 1.3;
   color: #eee;
 }
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 
   </style>
 </head>
@@ -236,63 +347,63 @@
   <section class="game-list">
     <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves<br></p>
       </a>
     </div>
     
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="test1.png" alt="鸣潮" />
+        <img src="poin.png" alt="鸣潮" />
         <p class="game-title">鸣潮<br>Wuthering Waves</p>
       </a>
     </div>
@@ -368,4 +479,37 @@
     }
   </script>
 </body>
+<footer class="footer">
+  <div class="footer-container">
+    <div class="footer-section">
+      <h2>Brilliant Gaming</h2>
+      <p>您的最佳手游充值伙伴</p>
+      <p>100% 最低价格 ｜ 100% 快速交付 ｜ 100% 安全保障</p>
+    </div>
+    <div class="footer-section">
+      <h3>联系我们</h3>
+      <p>营业时间：每日 9:00 - 01:00 (GMT+8)</p>
+      <p>WeChat：<span class="link">Brilliant_Gaming</span></p>
+      <p>WhatsApp：<span class="link">+60 123-456-789</span></p>
+    </div>
+    <div class="footer-section">
+      <h3>支付方式</h3>
+      <img src="yourpath/payments.png" alt="支付方式" class="payment-img" />
+    </div>
+    <div class="footer-section">
+      <h3>关注我们</h3>
+      <p>Instagram：<span class="link">@Brilliant.Gaming.Enterprise</span></p>
+    </div>
+  </div>
+  <hr />
+  <div class="footer-bottom">
+    <div class="footer-links">
+      <a href="#">免责声明</a>
+      <a href="#">使用条款</a>
+      <a href="#">隐私政策</a>
+    </div>
+    <p>© 2025 Brilliant Gaming. All rights reserved.</p>
+  </div>
+</footer>
+
 </html>
