--- a/首页demo.html
+++ b/首页demo.html
@@ -56,6 +56,37 @@
 }
 
 
+.footer-section {
+  text-align: center;
+  color: #ffffff;
+}
+
+.footer-title {
+  font-size: 32px;
+  font-weight: 700;
+  color: #ffffff;
+  margin-bottom: 12px;
+}
+
+.footer-subtitle {
+  font-size: 16px;
+  font-weight: 500;
+  color: #ffffff;
+  margin-bottom: 6px;
+}
+
+.footer-subtext {
+  font-size: 14px;
+  color: #ffffff;
+  margin-bottom: 24px;
+}
+
+.footer-tags p {
+  margin: 6px 0;
+  font-size: 14px;
+  color: #cccccc;
+  line-height: 1.8;
+}
 
     .footer {
   background-color: #111;
@@ -66,8 +97,8 @@
 }
 .footer h2, .footer h3 {
   text-align: left;
-  color: #fff;
-  font-size: 16px;
+  color: #FFD700;
+  font-size: 20px;
   margin-bottom: 10px;
 }
 .footer-container {
@@ -82,7 +113,8 @@
   margin: 6px 0;
 }
 .link {
-  color: #00bfff;
+  font-size: 15px;
+  color: #FFD700;
 }
 .payment-img {
   max-width: 160px;
@@ -535,9 +567,10 @@ html, body {
 <footer class="footer">
   <div class="footer-container">
     <div class="footer-section">
-      <h2>Brilliant Gaming</h2>
-      <p>您的最佳手游充值伙伴</p>
-      <p>100% 最低价格 ｜ 100% 快速交付 ｜ 100% 安全保障</p>
+      <h2 class="footer-title">Brilliant Gaming</h2>
+      <p class="footer-subtitle">官方授权 · 安全高效 · 值得信赖<BR>马来西亚 SSM 注册正规手游代充平台</p>
+        <div class="footer-tags"></div>
+      <p>正规渠道低价承诺｜高效稳定到账系统<BR>客服系统常驻在线｜支持多种支付方式<BR>付款立即到账处理｜用户满意持续口碑<BR>售后服务保障无忧｜正规公司安全认证</p>
     </div>
     <div class="footer-section">
       <h3>联系我们</h3>
