--- a/首页demo copy1.html
+++ b/首页demo copy1.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brilliant Gaming</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
+
+.social-link {
+  
+  color: #00f7ff;
+  font-size: 15px;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-top: 8px;
+}
+
+.link-text {
+  font-size: 18px;
+  text-underline-offset: 4px;
+  text-decoration: underline;
+  color: #00f7ff;
+}
+.social-link i {
+  font-size: 30px;
+  color: #ffffff;
+}
+
+.social-link:hover {
+  color: #ffffff;
+}
 
 /* 通用滚动区域样式 */
 .scroll-wrapper {
@@ -56,6 +83,38 @@
 }
 
 
+.footer-section {
+  text-align: center;
+  color: #ffffff;
+}
+
+.footer-title {
+  font-size: 32px;
+  font-weight: 700;
+  color: #ffffff;
+  margin-bottom: 12px;
+}
+
+.footer-subtitle {
+  font-size: 16px;
+  font-weight: 500;
+  color: #ffffff;
+  text-shadow: 0 0 10px rgb(255, 255, 255);
+  margin-bottom: 6px;
+}
+
+.footer-subtext {
+  font-size: 14px;
+  color: #ffffff;
+  margin-bottom: 24px;
+}
+
+.footer-tags p {
+  margin: 6px 0;
+  font-size: 14px;
+  color: #cccccc;
+  line-height: 1.8;
+}
 
     .footer {
   background-color: #111;
@@ -66,8 +125,8 @@
 }
 .footer h2, .footer h3 {
   text-align: left;
-  color: #fff;
-  font-size: 16px;
+  color: #FFD700;
+  font-size: 20px;
   margin-bottom: 10px;
 }
 .footer-container {
@@ -82,7 +141,8 @@
   margin: 6px 0;
 }
 .link {
-  color: #00bfff;
+  font-size: 15px;
+  color: #FFD700;
 }
 .payment-img {
   max-width: 160px;
@@ -535,15 +595,16 @@ html, body {
 <footer class="footer">
   <div class="footer-container">
     <div class="footer-section">
-      <h2>Brilliant Gaming</h2>
-      <p>您的最佳手游充值伙伴</p>
-      <p>100% 最低价格 ｜ 100% 快速交付 ｜ 100% 安全保障</p>
+      <h2 class="footer-title">Brilliant Gaming</h2>
+      <p class="footer-subtitle">官方授权 · 安全高效 · 值得信赖<BR>马来西亚 SSM 注册正规手游代充平台</p>
+        <div class="footer-tags"></div>
+      <p>正规渠道低价承诺｜高效稳定到账系统<BR>客服系统常驻在线｜支持多种支付方式<BR>付款立即到账处理｜用户满意持续口碑<BR>售后服务保障无忧｜正规公司安全认证</p>
     </div>
     <div class="footer-section">
       <h3>联系我们</h3>
-      <p>营业时间：每日 9:00 - 01:00 (GMT+8)</p>
+      <p class="footer-subtitle">营业时间：每日 9:00 - 01:00 (GMT+8)</p>
       <p>WeChat：<span class="link">Brilliant_Gaming</span></p>
-      <p>WhatsApp：<span class="link">+60 123-456-789</span></p>
+      <p>WhatsApp：<span class="link">+6012 445-8242</span></p>
     </div>
 
     <div class="footer-section">
@@ -574,16 +635,57 @@ html, body {
 
     </div>
     <div class="footer-section">
-      <h3>关注我们</h3>
-      <p>Instagram：<span class="link">@Brilliant.Gaming.Enterprise</span></p>
+      <h3 class="footer-title">Follow Us</h3>
+<p>关注我们 Instagram 频道<BR>获取独家游戏活动、充值优惠<BR>新游上线第一时间掌握！</p>
+
+<a href="https://www.instagram.com/Brilliant.Gaming.Enterprise" target="_blank" class="social-link">
+  <i class="fab fa-instagram"></i>
+  <span class="link-text">@Brilliant.Gaming.Enterprise</span>
+</a>
+<a href="https://www.instagram.com/Brilliant.Gaming.Enterprise" target="_blank" class="social-link">
+  <i class="fab fa-facebook"></i>
+  <span class="link-text">卓越电竞 「Brilliant Gaming」</span>
+  
+</a>
+
+
     </div>
   </div>
   <hr />
   <div class="footer-bottom">
     <div class="footer-links">
+
       <a href="#">免责声明</a>
+      <h2>免责声明</h2>
+<p>Brilliant Gaming 为独立的第三方手游代充平台，所提供的充值服务均通过正规授权渠道完成。</p>
+<p>本平台与各游戏官方（如腾讯、网易、米哈游等）无直接隶属关系，游戏版权归原开发商所有。</p>
+<p>用户需提供正确的游戏账号信息，一旦充值成功恕不退款；因信息错误导致的损失由用户自行承担。</p>
+<p>在法律允许范围内，Brilliant Gaming 不对任何因使用本平台服务所引发的直接或间接损失承担责任。</p>
+
       <a href="#">使用条款</a>
+      <h2>使用条款</h2>
+<p>在使用 Brilliant Gaming 提供的服务前，您需仔细阅读并同意以下条款：</p>
+
+<ul>
+  <li>1. 用户在下单前必须确保提供的游戏账号信息（如 UID、区服、角色名等）完整且正确。</li>
+  <li>2. 支付完成后系统将尽快处理订单，一般在 1~10 分钟内到账，如遇特殊情况（如维护、系统延迟）可能会延长。</li>
+  <li>3. 所有订单一经充值，除特殊情况外恕不接受取消、退款。</li>
+  <li>4. 禁止使用本平台进行洗钱、欺诈等违法行为，一经发现将立即封禁账号并配合执法机关调查。</li>
+</ul>
+<p>Brilliant Gaming 有权在不另行通知的情况下对服务条款进行修改，用户在使用服务时应定期查阅。</p>
+
       <a href="#">隐私政策</a>
+      <h2>隐私政策</h2>
+<p>我们非常重视您的个人信息安全与隐私保护，以下为 Brilliant Gaming 的隐私政策摘要：</p>
+
+<ul>
+  <li>1. 我们仅收集完成充值所需的必要信息（如游戏账号、支付截图、联系方式）。</li>
+  <li>2. 您的个人信息不会被出售、交换或共享给任何未经授权的第三方。</li>
+  <li>3. 所有信息仅用于订单处理与售后服务，不会用于其他用途。</li>
+  <li>4. 我们采用加密技术和人工审核双重保障您的数据安全。</li>
+</ul>
+<p>若您对我们的隐私政策有任何疑问，请通过客服渠道联系我们。</p>
+
     </div>
     <p>© 2025 Brilliant Gaming. All rights reserved.</p>
   </div>
