--- a/首页demo.html
+++ b/首页demo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
+  <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -32,6 +33,15 @@
 
 .social-link:hover {
   color: #ffffff;
+}
+
+.link-number {
+  color: #FFD700;       /* 金黄色 */
+  text-decoration: none;
+}
+
+.link-number:hover {
+  color: #ffff99;
 }
 
 /* 通用滚动区域样式 */
@@ -604,7 +614,7 @@ html, body {
       <h3>联系我们</h3>
       <p class="footer-subtitle">营业时间：每日 9:00 - 01:00 (GMT+8)</p>
       <p>WeChat：<span class="link">Brilliant_Gaming</span></p>
-      <p>WhatsApp：<span class="link">+6012 445-8242</span></p>
+      <p>WhatsApp：<a href="https://wa.me/60123456789" class="link-number">+6012 445-8242</span></p>
     </div>
 
     <div class="footer-section">
