--- a/首页demo.html
+++ b/首页demo.html
@@ -150,6 +150,7 @@
   text-align: left;
   margin: 6px 0;
 }
+
 .link {
   font-size: 15px;
   color: #FFD700;
@@ -614,7 +615,7 @@ html, body {
       <h3>联系我们</h3>
       <p class="footer-subtitle">营业时间：每日 9:00 - 01:00 (GMT+8)</p>
       <p>WeChat：<span class="link">Brilliant_Gaming</span></p>
-      <p>WhatsApp：<a href="https://wa.me/60123456789" class="link-number">+6012 445-8242</span></p>
+      <p>WhatsApp：<a href="https://wa.me/60123456789" class="link-number">+6012 445-8242</a></span></p>
     </div>
 
     <div class="footer-section">
@@ -646,11 +647,12 @@ html, body {
     </div>
     <div class="footer-section">
       <h3 class="footer-title">Follow Us</h3>
-<p>关注我们 Instagram 频道<BR>获取独家游戏活动、充值优惠<BR>新游上线第一时间掌握！</p>
+<p class="footer-subtitle">
+  关注我们 Instagram 频道<BR>获取独家游戏活动、充值优惠<BR>新游上线第一时间掌握！</p>
 
 <a href="https://www.instagram.com/Brilliant.Gaming.Enterprise" target="_blank" class="social-link">
   <i class="fab fa-instagram"></i>
-  <span class="link-text">@Brilliant.Gaming.Enterprise</span>
+  <span class="link-text">Brilliant.Gaming.Enterprise</span>
 </a>
 <a href="https://www.instagram.com/Brilliant.Gaming.Enterprise" target="_blank" class="social-link">
   <i class="fab fa-facebook"></i>
